2013-01-27  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/configsym.h: Increase config value size to be able to
	  store longer file names.

	* src/minicom.c: Comment spelling fix.

2013-01-14  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/ja.po: Update from TP.

2013-01-10  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/ascii-xfr.c, src/config.c, src/dial.c, src/help.c, src/updown.c, src/wkeys.c: Fix warnings with more modern warning options ("hardening").


	* po/fi.po: Update from Translation Project.

2013-01-09  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/util.c: Do not treat : as a device path delimiter, thus now
	  supporting path with colon in them, like
	  /dev/serial/by-path/.... Debian 697624

2012-12-21  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/nb.po: Update from TP.

2012-12-20  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/ja.po: Update from TP.

2012-12-10  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/vi.po: Update from TP.

2012-12-09  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/de.po: Update from TP.

2012-12-08  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/pl.po: Update from TP.

	* configure.in: Increase version to 2.6.1.90

2012-11-21  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/minicom.c: Print creation date of serial device file if < 20 hrs

2012-09-02  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* man/minicom.1: Fix date and version.

	* src/config.c, src/configsym.h, src/main.c, src/minicom.c,
	  src/minicom.h, src/rwconf.c, man/minicom.1: Add option to output as
	  hex, initial patch by Jiao ShuYing, #313754

2012-07-27  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* po/nb.po: Update from translation team.

2012-07-22  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/config.c, src/configsym.h, src/minicom.c, src/rwconf.c: Add
	  line-wrap config-file option, by Riku Meskanen

